[gd_scene load_steps=21 format=3 uid="uid://cby7cmef2ktf7"]

[ext_resource type="Script" uid="uid://cb1rff2o2tw7" path="res://scenes/GamePage.gd" id="1_l4ls2"]
[ext_resource type="Script" uid="uid://dvpeyq8pdki5n" path="res://cards/Card.gd" id="2_cgs03"]
[ext_resource type="PackedScene" uid="uid://cd8iri7yfheoo" path="res://scenes/AttributesDialog.tscn" id="2_cn2iv"]
[ext_resource type="PackedScene" uid="uid://jgb3tjribh4q" path="res://scenes/Deck.tscn" id="2_eq02q"]
[ext_resource type="Script" uid="uid://dy1712xc1frlt" path="res://attributes/Attributes.gd" id="3_cvct5"]
[ext_resource type="Resource" uid="uid://tcs81g5jsk6s" path="res://cards/Energy.tres" id="3_no3yn"]
[ext_resource type="Resource" uid="uid://drksmnoojsxeg" path="res://attributes/Offensive/Balanced.tres" id="4_eq02q"]
[ext_resource type="Resource" uid="uid://cifa4q3dd411p" path="res://attributes/Offensive/Forceful.tres" id="5_edcfr"]
[ext_resource type="Resource" uid="uid://b3l0bc7pu0ysu" path="res://attributes/Offensive/Graceful.tres" id="6_cgs03"]
[ext_resource type="Resource" uid="uid://copd5dabeyha6" path="res://attributes/Offensive/Powerful.tres" id="7_no3yn"]
[ext_resource type="Resource" uid="uid://cu8gpr2dknk1h" path="res://attributes/Offensive/Swift.tres" id="8_dmwya"]
[ext_resource type="Resource" uid="uid://btslp3it7ep6" path="res://attributes/Defensive/Enduring.tres" id="9_xoo87"]
[ext_resource type="Resource" uid="uid://crprxpktqqu72" path="res://attributes/Defensive/Evasive.tres" id="10_fnh8k"]
[ext_resource type="Resource" uid="uid://c2wcjw0tvakgh" path="res://attributes/Defensive/Perceptive.tres" id="11_d4ymw"]
[ext_resource type="Resource" uid="uid://da6oghdd287di" path="res://attributes/Defensive/Protective.tres" id="12_dbq57"]
[ext_resource type="Resource" uid="uid://csohc20oo8m3b" path="res://attributes/Defensive/Reactive.tres" id="13_j2p5u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6hu8l"]
bg_color = Color(0.982682, 0.352394, 0.388964, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cn2iv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yam8l"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eovpl"]
bg_color = Color(0.227967, 0.70871, 0.326833, 1)

[node name="GamePage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l4ls2")
MAX_HAND_SIZE = 5
base_deck = Array[ExtResource("2_cgs03")]([ExtResource("3_no3yn"), ExtResource("3_no3yn"), ExtResource("3_no3yn"), ExtResource("3_no3yn"), ExtResource("3_no3yn")])

[node name="OpponentField" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 216.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6hu8l")

[node name="HandContainer" type="HBoxContainer" parent="OpponentField"]
custom_minimum_size = Vector2(757.29, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Deck" type="Panel" parent="OpponentField"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 194.0
grow_vertical = 2

[node name="Discard" type="Panel" parent="OpponentField"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -194.46
offset_right = -0.459961
grow_horizontal = 0
grow_vertical = 2

[node name="CenterField" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -108.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cn2iv")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterField"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -86.0
grow_horizontal = 0
grow_vertical = 2
alignment = 2

[node name="PlayHandButton" type="Button" parent="CenterField/VBoxContainer"]
layout_mode = 2
text = "Play Hand
"

[node name="DiscardButton" type="Button" parent="CenterField/VBoxContainer"]
layout_mode = 2
text = "Discard
"

[node name="Menu" type="Panel" parent="CenterField"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -108.0
offset_right = 200.0
offset_bottom = 108.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yam8l")

[node name="ChampionField" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -216.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_eovpl")

[node name="HandContainer" type="HBoxContainer" parent="ChampionField"]
custom_minimum_size = Vector2(757.29, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeckContainer" type="Panel" parent="ChampionField"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 194.0
grow_vertical = 2

[node name="DeckCount" type="Label" parent="ChampionField/DeckContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "0"

[node name="Deck" parent="ChampionField/DeckContainer" instance=ExtResource("2_eq02q")]

[node name="Discard" type="Panel" parent="ChampionField"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -194.46
offset_right = -0.459961
grow_horizontal = 0
grow_vertical = 2

[node name="AttributesDialog" parent="." instance=ExtResource("2_cn2iv")]
z_index = 1
layout_mode = 1
off_attributes_data = Array[ExtResource("3_cvct5")]([ExtResource("4_eq02q"), ExtResource("5_edcfr"), ExtResource("6_cgs03"), ExtResource("7_no3yn"), ExtResource("8_dmwya")])
def_attributes_data = Array[ExtResource("3_cvct5")]([ExtResource("9_xoo87"), ExtResource("10_fnh8k"), ExtResource("11_d4ymw"), ExtResource("12_dbq57"), ExtResource("13_j2p5u")])

[connection signal="pressed" from="CenterField/VBoxContainer/PlayHandButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterField/VBoxContainer/DiscardButton" to="." method="_on_discard_button_pressed"]
